# certificate-manipulation

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILLS.md  agent.md  plan.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: benchmark.yml  release.yml
benchmarks/: ci_thresholds.json
docs/engineering/: CONTRACTS.md  README.md  RELEASE_RUNBOOK.md  TROUBLESHOOTING.md
scripts/: benchmark_large_bundle.py  clear_results.sh  run_raw_examples.sh
skills/code-style/: SKILL.md
skills/review-followup/: SKILL.md
src/certificate_manipulation/: __init__.py  async_runner.py  cli.py  exceptions.py  logging.py  settings.py
src/certificate_manipulation/adapters/: __init__.py  filesystem_io.py  x509_parser.py
src/certificate_manipulation/domain/: __init__.py  enums.py  models.py
src/certificate_manipulation/services/: __init__.py  bundle_service.py  naming_service.py  output_policy_service.py
tests/: cert_factory.py
tests/end2end/: test_cli_contract.py  test_cli_help.py  test_cli_operations.py
tests/integration/: test_imports.py  test_operations.py
tests/unit/: test_async_runner.py  test_benchmark_large_bundle.py  test_bundle_service.py  test_cli.py  test_exceptions.py  test_logging.py  test_naming_service.py  test_output_policy_service.py  test_public_api_contract.py  test_settings.py  test_version.py  test_x509_parser.py
